Technical SEO: robots.txt, favicon, RSS, fix canonicals, OG/Twitter tags, humans.txt

--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -7,6 +7,15 @@
 <meta name="description" content="Cookie Policy for Balbus Speech - Unlocking Fluent Communication. Read our cookie policy for important information.">
 <link rel="canonical" href="https://balbusspeech.pages.dev/cookie-policy/">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:title" content="Cookie Policy | Balbus Speech - Unlocking Fluent Communication">
+<meta property="og:url" content="https://balbusspeech.pages.dev/cookie-policy/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Balbus Speech - Unlocking Fluent Communication">
+<meta property="og:description" content="Cookie Policy for Balbus Speech - Unlocking Fluent Communication. Read our cookie policy for important information.">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Cookie Policy | Balbus Speech - Unlocking Fluent Communication">
 </head>
 <body>
 
