--- a/sitemap.html
+++ b/sitemap.html
@@ -12,6 +12,8 @@
 <meta property="og:description" content="Your trusted partner in enhancing communication skills through evidence-based speech therapy.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://balbusspeech.pages.dev/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta name="twitter:card" content="summary">
 </head>
 <body>
 
