--- a/terms/index.html
+++ b/terms/index.html
@@ -12,6 +12,8 @@
 <meta property="og:description" content="Balbus Speech terms of service.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://balbusspeech.pages.dev/terms/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta name="twitter:card" content="summary">
 </head>
 <body>
 <header class="header">
