--- a/404.html
+++ b/404.html
@@ -44,6 +44,14 @@
 }
 .error-page a.btn:hover { opacity: 0.85; }
 </style>
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:title" content="Page Not Found | Balbus Speech - Unlocking Fluent Communication">
+<meta property="og:url" content="https://balbusspeech.pages.dev/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Balbus Speech - Unlocking Fluent Communication">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Page Not Found | Balbus Speech - Unlocking Fluent Communication">
 </head>
 <body>
 <header>
