--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -12,6 +12,8 @@
 <meta property="og:description" content="Get in touch with Balbus Speech for speech therapy services.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://balbusspeech.pages.dev/contact-us/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta name="twitter:card" content="summary">
 </head>
 <body>
 <header class="header">
