Fix canonicals to real domain + add JSON-LD schema + breadcrumbs

--- a/404.html
+++ b/404.html
@@ -45,13 +45,14 @@
 .error-page a.btn:hover { opacity: 0.85; }
 </style>
 <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta property="og:title" content="Page Not Found | Balbus Speech - Unlocking Fluent Communication">
-<meta property="og:url" content="https://balbusspeech.pages.dev/">
+<meta property="og:url" content="https://balbusspeech.com/">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Balbus Speech - Unlocking Fluent Communication">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Page Not Found | Balbus Speech - Unlocking Fluent Communication">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "Page Not Found | Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}}</script>
 </head>
 <body>
 <header>
