--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -5,17 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Disclaimer | Balbus Speech - Unlocking Fluent Communication</title>
 <meta name="description" content="Disclaimer for Balbus Speech - Unlocking Fluent Communication. Read our disclaimer for important information.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/disclaimer/">
+<link rel="canonical" href="https://balbusspeech.com/disclaimer/">
 <link rel="stylesheet" href="/css/style.css">
 <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta property="og:title" content="Disclaimer | Balbus Speech - Unlocking Fluent Communication">
-<meta property="og:url" content="https://balbusspeech.pages.dev/disclaimer/">
+<meta property="og:url" content="https://balbusspeech.com/disclaimer/">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Balbus Speech - Unlocking Fluent Communication">
 <meta property="og:description" content="Disclaimer for Balbus Speech - Unlocking Fluent Communication. Read our disclaimer for important information.">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Disclaimer | Balbus Speech - Unlocking Fluent Communication">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "Disclaimer | Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/disclaimer/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}, "description": "Disclaimer for Balbus Speech - Unlocking Fluent Communication. Read our disclaimer for important information."}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "BreadcrumbList", "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://balbusspeech.com/"}, {"@type": "ListItem", "position": 2, "name": "Disclaimer | Balbus Speech - Unlocking Fluent Communication", "item": "https://balbusspeech.com/disclaimer/"}]}</script>
 </head>
 <body>
 
@@ -24,7 +26,7 @@
 <div class="content" style="max-width:750px;margin:0 auto;padding:40px 30px">
 <p><em>Last updated: 2026-02-21</em></p>
 <h2>General Disclaimer</h2>
-<p>The information provided on Balbus Speech - Unlocking Fluent Communication (https://balbusspeech.pages.dev) is for general informational purposes only. All information on the site is provided in good faith; however, we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
+<p>The information provided on Balbus Speech - Unlocking Fluent Communication (https://balbusspeech.com) is for general informational purposes only. All information on the site is provided in good faith; however, we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
 
 <h2>External Links Disclaimer</h2>
 <p>The site may contain links to other websites or content belonging to or originating from third parties. Such external links are not investigated, monitored, or checked for accuracy, adequacy, validity, reliability, availability, or completeness by us.</p>
