--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Balbus Speech - Unlocking Fluent Communication</title>
 <meta name="description" content="Your trusted partner in enhancing communication skills through evidence-based speech therapy.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/">
+<link rel="canonical" href="https://balbusspeech.com/">
 <link rel="icon" href="/images/favicon.png">
 <link rel="stylesheet" href="/css/style.css">
 <meta property="og:title" content="Balbus Speech - Unlocking Fluent Communication">
 <meta property="og:description" content="Your trusted partner in enhancing communication skills through evidence-based speech therapy.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://balbusspeech.pages.dev/">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:url" content="https://balbusspeech.com/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta name="twitter:card" content="summary">
 </head>
 <body>
@@ -31,7 +31,7 @@
   "@context": "https://schema.org",
   "@type": "MedicalBusiness",
   "name": "Balbus Speech",
-  "url": "https://balbusspeech.pages.dev/",
+  "url": "https://balbusspeech.com/",
   "description": "Speech therapy services for individuals of all ages",
   "medicalSpecialty": "SpeechPathology"
 }</script>
