--- a/sitemap.html
+++ b/sitemap.html
@@ -5,15 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sitemap | Balbus Speech - Unlocking Fluent Communication</title>
 <meta name="description" content="Complete sitemap for Balbus Speech - Unlocking Fluent Communication. Browse all pages and content.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/">
+<link rel="canonical" href="https://balbusspeech.com/">
 <link rel="icon" href="/images/favicon.png">
 <link rel="stylesheet" href="/css/style.css">
 <meta property="og:title" content="Balbus Speech - Unlocking Fluent Communication">
 <meta property="og:description" content="Your trusted partner in enhancing communication skills through evidence-based speech therapy.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://balbusspeech.pages.dev/">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:url" content="https://balbusspeech.com/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta name="twitter:card" content="summary">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "Sitemap | Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}, "description": "Complete sitemap for Balbus Speech - Unlocking Fluent Communication. Browse all pages and content."}</script>
 </head>
 <body>
 
