--- a/terms/index.html
+++ b/terms/index.html
@@ -5,15 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Terms of Service - Balbus Speech</title>
 <meta name="description" content="Balbus Speech terms of service.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/terms/">
+<link rel="canonical" href="https://balbusspeech.com/terms/">
 <link rel="icon" href="/images/favicon.png">
 <link rel="stylesheet" href="/css/style.css">
 <meta property="og:title" content="Terms of Service - Balbus Speech">
 <meta property="og:description" content="Balbus Speech terms of service.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://balbusspeech.pages.dev/terms/">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:url" content="https://balbusspeech.com/terms/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta name="twitter:card" content="summary">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "Terms of Service - Balbus Speech", "url": "https://balbusspeech.com/terms/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}, "description": "Balbus Speech terms of service."}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "BreadcrumbList", "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://balbusspeech.com/"}, {"@type": "ListItem", "position": 2, "name": "Terms of Service - Balbus Speech", "item": "https://balbusspeech.com/terms/"}]}</script>
 </head>
 <body>
 <header class="header">
