--- a/about/index.html
+++ b/about/index.html
@@ -5,15 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Balbus Speech | Your Partner in Effective Communication</title>
 <meta name="description" content="Learn about Balbus Speech and our mission to empower communication.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/about/">
+<link rel="canonical" href="https://balbusspeech.com/about/">
 <link rel="icon" href="/images/favicon.png">
 <link rel="stylesheet" href="/css/style.css">
 <meta property="og:title" content="About Balbus Speech | Your Partner in Effective Communication">
 <meta property="og:description" content="Learn about Balbus Speech and our mission to empower communication.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://balbusspeech.pages.dev/about/">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:url" content="https://balbusspeech.com/about/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta name="twitter:card" content="summary">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "About Balbus Speech | Your Partner in Effective Communication", "url": "https://balbusspeech.com/about/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}, "description": "Learn about Balbus Speech and our mission to empower communication."}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "BreadcrumbList", "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://balbusspeech.com/"}, {"@type": "ListItem", "position": 2, "name": "About Balbus Speech | Your Partner in Effective Communication", "item": "https://balbusspeech.com/about/"}]}</script>
 </head>
 <body>
 <header class="header">
