--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -5,15 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact Us - Balbus Speech</title>
 <meta name="description" content="Get in touch with Balbus Speech for speech therapy services.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/contact-us/">
+<link rel="canonical" href="https://balbusspeech.com/contact-us/">
 <link rel="icon" href="/images/favicon.png">
 <link rel="stylesheet" href="/css/style.css">
 <meta property="og:title" content="Contact Us - Balbus Speech">
 <meta property="og:description" content="Get in touch with Balbus Speech for speech therapy services.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://balbusspeech.pages.dev/contact-us/">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<meta property="og:url" content="https://balbusspeech.com/contact-us/">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta name="twitter:card" content="summary">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "Contact Us - Balbus Speech", "url": "https://balbusspeech.com/contact-us/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}, "description": "Get in touch with Balbus Speech for speech therapy services."}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "BreadcrumbList", "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://balbusspeech.com/"}, {"@type": "ListItem", "position": 2, "name": "Contact Us - Balbus Speech", "item": "https://balbusspeech.com/contact-us/"}]}</script>
 </head>
 <body>
 <header class="header">
