--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -5,17 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Cookie Policy | Balbus Speech - Unlocking Fluent Communication</title>
 <meta name="description" content="Cookie Policy for Balbus Speech - Unlocking Fluent Communication. Read our cookie policy for important information.">
-<link rel="canonical" href="https://balbusspeech.pages.dev/cookie-policy/">
+<link rel="canonical" href="https://balbusspeech.com/cookie-policy/">
 <link rel="stylesheet" href="/css/style.css">
 <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.pages.dev/feed.xml">
+<link rel="alternate" type="application/rss+xml" title="Balbus Speech - Unlocking Fluent Communication" href="https://balbusspeech.com/feed.xml">
 <meta property="og:title" content="Cookie Policy | Balbus Speech - Unlocking Fluent Communication">
-<meta property="og:url" content="https://balbusspeech.pages.dev/cookie-policy/">
+<meta property="og:url" content="https://balbusspeech.com/cookie-policy/">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Balbus Speech - Unlocking Fluent Communication">
 <meta property="og:description" content="Cookie Policy for Balbus Speech - Unlocking Fluent Communication. Read our cookie policy for important information.">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Cookie Policy | Balbus Speech - Unlocking Fluent Communication">
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "WebPage", "name": "Cookie Policy | Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/cookie-policy/", "isPartOf": {"@type": "WebSite", "name": "Balbus Speech - Unlocking Fluent Communication", "url": "https://balbusspeech.com/"}, "description": "Cookie Policy for Balbus Speech - Unlocking Fluent Communication. Read our cookie policy for important information."}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "BreadcrumbList", "itemListElement": [{"@type": "ListItem", "position": 1, "name": "Home", "item": "https://balbusspeech.com/"}, {"@type": "ListItem", "position": 2, "name": "Cookie Policy | Balbus Speech - Unlocking Fluent Communication", "item": "https://balbusspeech.com/cookie-policy/"}]}</script>
 </head>
 <body>
 
